--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-    Iterate the JSON data using for loops (for, for in, for of, forEach)
-    </h1>
-    <script src="json.js"></script>
+    <h1>Resume data in JSON format</h1>
+    <script src="resume.js"></script>
 </body>
 </html>
